Image src update

--- a/src/app/img-lazy/img-full-screen/img-full-screen.component.html
+++ b/src/app/img-lazy/img-full-screen/img-full-screen.component.html
@@ -41,9 +41,6 @@
     </svg>
   </div>
   <div class="fullImageWrap">
-    <img
-      src="https://angular.io/generated/images/guide/elements/createElement.png"
-      alt=""
-    />
+    <img [src]="src" alt="" />
   </div>
 </div>
