--- a/src/app/img-lazy/img-lazy.component.html
+++ b/src/app/img-lazy/img-lazy.component.html
@@ -10,6 +10,7 @@
     />
   </figure>
   <app-img-full-screen
+    [src]="src"
     (closePopup)="closeFullScreen()"
     #fullImg
   ></app-img-full-screen>
